# cafe-demand-forecasting

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  environment.yml  plan.md  requirements.txt
ml-model/: README.md  export-env.sh  metric_evaluation.md  pyproject.toml
ml-model/cafe_supply_forecasting.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ml-model/data/predictions/: forecast_summary.json
ml-model/data/processed/: 3_month_forecasts.csv  association_rules_apriori_original.csv  association_rules_fpgrowth.csv  association_rules_fpgrowth_filtered.csv  category_association_rules.csv  daily_category_sales.csv  daily_item_sales.csv  daily_item_sales_by_period.csv  daily_total_sales.csv  frequent_categories.csv  (+3 more)
ml-model/docs/: model-comparison.md
ml-model/models/: dow_factors.json  dow_factors_sarimax.json  model_metadata.json  model_metadata_prophet.json  model_metadata_rf.json  model_metadata_sarimax.json
ml-model/notebooks/: 001_data_transformation.ipynb  002_eda.ipynb  003_data_forecast.ipynb
ml-model/scripts/: 001_data_transformation.py  002_data_forecast.py  00_pull_from_hus_db.py  01_merge_sales_data.py  02_clean_sales_data.py  03_preprocess_raw_materials.py  03_transform_sales.py  04_forecast.py  04_preprocess_raw_materials.py  05_forecast_to_materials.py  06_check_overfitting.py  07_compare_models.py  forecast.py  seed_database.py  train_models.py
ml-model/src/: __init__.py
ml-model/src/data/: __init__.py  (+4 more)
ml-model/tests/: test_src.py
(+118 files in other folders)
